@@ -2,7 +2,7 @@ package App::Doh;
 
 use 5.010001;
 use namespace::sweep;
-use version; our $VERSION = qv( sprintf '0.1.%d', q$Rev: 55 $ =~ /\d+/gmx );
+use version; our $VERSION = qv( sprintf '0.1.%d', q$Rev: 56 $ =~ /\d+/gmx );
 
 use Moo;
 use Class::Usul::Constants;
@@ -37,7 +37,7 @@ App::Doh - An easy way to document a project using Markdown
 
 =head1 Version
 
-This documents version v0.1.$Rev: 55 $ of L<App::Doh>
+This documents version v0.1.$Rev: 56 $ of L<App::Doh>
 
 =head1 Description
 
@@ -46,8 +46,17 @@ and L<Web::Simple>
 
 =head1 Configuration and Environment
 
-The configuration file attributes are documented in the L<App::Doh::Config>
+The configuration file options are documented in the F<App::Doh::Config>
 package
+
+The command line methods are documented in F<App::Doh::CLI>
+
+The production server options are detailed in F<App::Doh::Daemon>
+
+The request object F<App::Doh::Request> represents all that is now about the
+current request
+
+F<App::Doh::Server> is the L<Web::Simple> based application server
 
 =head1 Subroutines/Methods
 
@@ -56,14 +65,13 @@ None
 =head1 Diagnostics
 
 Exporting C<DOH_DEBUG> and setting it to true causes the development
-server to start logging at the debug level
+server to start logging at the debug level to F<var/logs/app_doh.log>
 
-The development server can be started using
+Starting the daemon with the C<-D> option will cause it to log debug
+information to the file F<var/logs/daemon.log> and the application will
+also start logging at the debug level
 
-   plackup bin/doh-server
-
-Starting the daemon with the C<-D> option will cause it to print debug
-information to the log file F<var/logs/daemon.log>
+The production server logs requests to the file F<var/logs/access_8085.log>
 
 =head1 Dependencies
 
