@@ -149,6 +149,7 @@ table tr th:last-child, table tr td:last-child {
 }
 
 /* Classes */
+.app-thumbnail { margin-top: 18px; }
 .article-tree, .content-area { height: 100%; overflow: auto; }
 .article-tree .collapse { direction: ltr; }
 .btn { display: inline-block; text-align: center; vertical-align: middle; }
@@ -262,10 +263,10 @@ table tr th:last-child, table tr td:last-child {
 .homepage-content.container-fluid,
 .homepage-footer.container-fluid { font-size: 14px; line-height: 18px; }
 .homepage-content.container-fluid .lead { .serif-regular; }
-.homepage-content.container-fluid ul,
-.homepage-content.container-fluid ol { margin: 0 0 18px 0; padding: 18px 0; }
-.homepage-content.container-fluid ul li,
-.homepage-content.container-fluid ol li {
+.homepage-content.container-fluid ol,
+.homepage-content.container-fluid ul { margin: 18px 0; padding: 0; }
+.homepage-content.container-fluid ol li,
+.homepage-content.container-fluid ul li {
    list-style: none; padding-bottom: 6px;
 }
 .homepage-content.container-fluid ul li:before,
